kubernetes/apps/linkwarden/manifests/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-postgres
  namespace: linkwarden
  labels:
    app: linkwarden-postgres
spec:
  serviceName: linkwarden-postgres
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden-postgres
  template:
    metadata:
      labels:
        app: linkwarden-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: proxmox
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-postgres
  namespace: linkwarden
spec:
  type: ClusterIP
  selector:
    app: linkwarden-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
