kubernetes/apps/linkwarden/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  type: ClusterIP
  selector:
    app: linkwarden
  ports:
    - name: web
      port: 80
      targetPort: 3000
      protocol: TCP
